--- a/.gitmodules
+++ b/.gitmodules
@@ -20,7 +20,7 @@
 	path = bundle/tlib_vim
 	url = https://github.com/tomtom/tlib_vim.git
 [submodule "bundle/vim-snippets"]
-	path = bundle/snipmate-snippets
+	path = bundle/vim-snippets
 	url = https://github.com/honza/vim-snippets.git
 [submodule "bundle/vim-haml"]
 	path = bundle/vim-haml
